feat : 랭킹서버 환경변수 설정

--- a/ranking/src/main/resources/static/index.html
+++ b/ranking/src/main/resources/static/index.html
@@ -8,16 +8,16 @@
 
 
 
-<a href="/rank/attack">공격 TOP10 from redis</a>
+<a href="rank/attack">공격 TOP10 from redis</a>
 <br>
 
-<a href="/rank/defense">방어 TOP10 from redis</a>
+<a href="rank/defense">방어 TOP10 from redis</a>
 <br>
 
-<a href="/rank/pass">패스 TOP10 from redis</a>
+<a href="rank/pass">패스 TOP10 from redis</a>
 <br>
 
-<a href="/rank/total">totl TOP 10 from DB</a>
+<a href="rank/total">total TOP 10 from DB</a>
 <br>
 
 
